# Wakalat-AI-Backend

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_SETUP.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  FIRECRAWL_SETUP.md  LICENSE  QUICKSTART.md  README.md  SUPABASE_INTEGRATION_SUMMARY.md  SUPABASE_SETUP.md  UV_USAGE.md  claude_desktop_config.json  create_test_pdf.py  docker-compose.yml  generate_pdf.py  http_main.py  main.py  minimal_http_server.py  pyproject.toml  render.yaml  requirements.txt  setup.py  supabase_vector_search_function.sql
.claude/: settings.local.json
docs/: VECTOR_DATABASE.md
eval/: NIYAM_BASELINE.md  README.md  __init__.py  benchmark_tasks.yaml  metrics_spec.yaml  models.py  run_benchmark.py
eval/scorers/: __init__.py  citation.py  verifiable.py
eval/templates/: human_rubric_template.csv
integrations/: frontend.md
scripts/: demo_vector_search.py  load_sample_data.py  run_server.sh  setup.sh
src/: __init__.py  auth.py  config.py  http_server.py  server.py
src/models/: __init__.py  case.py  mcp_catalog.py
src/services/: __init__.py  vector_db.py
src/tools/: __init__.py  case_law_finder.py  deep_research.py  document_analyzer.py  document_drafter.py  legal_research.py  limitation_checker.py  llm.py  precedent_search.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  test_document_drafter.py  test_tools.py  test_vector_db.py
